修复插件加载中读取配置文件的bug(没错又是我找出了自己写的bug)